--- a/ImportSDKDemo/Info.plist
+++ b/ImportSDKDemo/Info.plist
@@ -54,5 +54,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Bluetooth Use is Required for Mobile SDK Osmo Support</string>
 </dict>
 </plist>
